--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+$spacer:40px;
+
+.px-2{
+    padding-left: ($spacer * .5) ;
+    padding-right: ($spacer * .5) ;
+}
+
+
+.top-spacer{
+    padding-top: $spacer;
+}
+
+
+.spacer-div{
+    min-height: $spacer;
+}
