--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,8 +1,34 @@
-<div class="container clients">
+<div class="clients">
     <h5 class="title">CLIENTS</h5>
     <h3>
         Look Closer With Our Beloved Client
     </h3>
     <div class="clients-logos">
-
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/1.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/2.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/3.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/4.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/5.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/6.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/7.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/8.svg"/>
+        </div>
+        <div class="logo-img">
+            <img alt="logo1" src="../../assets/9.svg"/>
+        </div>
     </div>
