--- a/src/app/counter-card/counter-card.component.html
+++ b/src/app/counter-card/counter-card.component.html
@@ -1,4 +1,9 @@
-<div class="counter-card row">
-    <h1 class="col col-counter-num">536+</h1>
-    <p class="col col-counter-desc"> Clients & Partnerts Trusted </p>
+<div class="counter-card">
+    <div>
+        <h1 class="col-counter-num">536+</h1>
+    </div>
+
+    <div>
+        <p class="col-counter-desc"> Clients & Partnerts Trusted </p>
+    </div>
 </div>
