--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,20 +6,18 @@
     <app-we-are-card></app-we-are-card>
     <div class="spacer-div"></div>
 
-    <div class="we-are-cards row container">
-        <div class="col">
-            <div  [@fadeInFromTop1]>
-                <app-we-are-img-text-card [WeAreTitleCard]="'WE ARE DYNAMIC'"
-                    [WeAreDescriptionCard]="'Being a dynamic, DUBAI based, venture capital business, Milaya Capital owns a portfolio of exciting brands that prosper in the local retail and property industries. Even though relatively young, Milaya Capital’s growth across different sectors has been exponential.'"></app-we-are-img-text-card>
-            </div>
+    <div class="we-are-cards container">
+        <div [@fadeInFromTop1] class="card1">
+            <app-we-are-img-text-card [WeAreTitleCard]="'WE ARE DYNAMIC'"
+                [WeAreDescriptionCard]="'Being a dynamic, DUBAI based, venture capital business, Milaya Capital owns a portfolio of exciting brands that prosper in the local retail and property industries. Even though relatively young, Milaya Capital’s growth across different sectors has been exponential.'"></app-we-are-img-text-card>
         </div>
-        <div class="col">
-            <div  [@fadeInFromTop2]>
-                <app-we-are-img-text-card [WeAreTitleCard]="'OUR VISION'"
-                    [WeAreDescriptionCard]="'Milaya Capital’s vision is to create a better tomorrow for the generations to come. A world where we can live in, a sustainable future hence we pay all our efforts in being environmentally sustainable throughout our company’s operations.'"></app-we-are-img-text-card>
-
-            </div>
+        <div [@fadeInFromTop2] class="card2">
+            <app-we-are-img-text-card [WeAreTitleCard]="'OUR VISION'"
+                [WeAreDescriptionCard]="'Milaya Capital’s vision is to create a better tomorrow for the generations to come. A world where we can live in, a sustainable future hence we pay all our efforts in being environmentally sustainable throughout our company’s operations.'"></app-we-are-img-text-card>
         </div>
+    </div>
+    <div>
+        
         <div class="spacer-div"></div>
 
         <div class="counter-cards row container" [@fadeInFromTop]>
@@ -29,16 +27,17 @@
         </div>
         <div class="spacer-div"></div>
 
-        <div class="divider"  [@fadeInFromTop]></div>></div>
-        <div class="spacer-div"></div>
-
-
-        <app-clients></app-clients>
-        <div class="spacer-div"></div>
-
-        <app-media [mediaType]="'video'"
-            [mediaURL]="'http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4'"></app-media>
-        <!-- <app-media [mediaType]="'image'" [mediaURL]="'https://fastly.picsum.photos/id/512/536/354.jpg?hmac=B1ChCYwros8uQq7yiGCxjYXB-6pIuzoYaL10sWf01H4'"></app-media> -->
-
-        <app-footer> </app-footer>
+        <div class="divider" [@fadeInFromTop]></div>>
     </div>
+    <div class="spacer-div"></div>
+
+
+    <app-clients></app-clients>
+    <div class="spacer-div"></div>
+
+    <app-media [mediaType]="'video'"
+        [mediaURL]="'http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4'"></app-media>
+    <!-- <app-media [mediaType]="'image'" [mediaURL]="'https://fastly.picsum.photos/id/512/536/354.jpg?hmac=B1ChCYwros8uQq7yiGCxjYXB-6pIuzoYaL10sWf01H4'"></app-media> -->
+
+    <app-footer> </app-footer>
+</div>
