--- a/src/app/clients/clients.component.scss
+++ b/src/app/clients/clients.component.scss
@@ -34,7 +34,7 @@
         align-items: center;
 
         .logo-img {
-            flex: 0 0 calc(20% - 10px);
+            flex: 1;
             margin: 5px;
             box-sizing: border-box;
         }
