--- a/src/app/counter-card/counter-card.component.scss
+++ b/src/app/counter-card/counter-card.component.scss
@@ -1,8 +1,8 @@
 @import '../../variables';
 .counter-card{
-    
+    display: flex;
     h1{
-        color: #2C55F1;
+        color: $brand;
         display: inline;
     }
     .col-counter-num{
