--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,9 +3,8 @@
 .footer {
     padding-top: 50px;
     position: relative;
-    // margin: auto;
-    margin-right: 0px;
-    margin-left: 0px;
+    margin-left: auto;
+    margin-right: auto;
 
     .footer-logo {
         margin-bottom: 25px;
