--- a/src/app/main-poster/main-poster.component.scss
+++ b/src/app/main-poster/main-poster.component.scss
@@ -10,6 +10,10 @@
     position: relative;
     z-index: 0;
 
+    @media screen and (max-width: 1000px) {
+        padding: 20px;
+    }
+
     .main-desc {
         font-weight: 700;
         color: $white;
