--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -15,7 +15,7 @@
     margin-bottom: 50px;
 
     .navbar a {
-        // color: $brand;
+        flex:1;
         text-decoration: none;
         padding:10px 40px;
         font-size: $s-font-2 ;
@@ -36,7 +36,7 @@
     .contact-btn {
         width: 148px ;
         border-radius: 47px;
-       
+        height: 40px;
     }
     
 }
@@ -58,6 +58,11 @@
         background-color: $brand;
         color: $white;
     }
+    .navbar a {
+        @media screen and (max-width: 1000px) {
+            padding: 15px;
+        }
+    }
 }
 .poster-navbar,.contact-navbar{
     margin-top: 0px;
@@ -76,6 +81,13 @@
         background-color: $white ;
         color: $brand ;
     }
+
+    .navbar a {
+        @media screen and (max-width: 1000px) {
+            padding: 15px;
+        }
+    }
+   
 }
 
 .contact-navbar{
