finalozing responsiveness nd input validations

--- a/src/app/counter-card/counter-card.component.scss
+++ b/src/app/counter-card/counter-card.component.scss
@@ -11,7 +11,7 @@
     .col-counter-desc{
         margin-top: auto;
         margin-bottom: auto;
-        font-size: 15px;
+        font-size: $s-font;
 
     }
 }
