--- a/src/app/portfolio-detail-card/portfolio-detail-card.component.html
+++ b/src/app/portfolio-detail-card/portfolio-detail-card.component.html
@@ -23,19 +23,20 @@
                 generates extra value.
             </p>
         </div>
-        <div class="row " [@fadeInFromTop1]>
-            <div class="col-6">
-                <button type="button" class="btn btn-primary contact-btn">MILAYAENERGY.COM
+        <div class="d-flex" [@fadeInFromTop1]>
+            <div class="contact-btn-col">
+                <button type="submit" class="btn btn-primary">
+                    MILAYAENERGY.COM
                     <i class="bi bi-arrow-up-right"></i>
                 </button>
             </div>
-            <div class="col-6 contact-details">
-                <div>
-                    <i class="bi bi-geo-alt"></i>
+            <div class="contact-details">
+                <div class="d-flex">
+                    <i class="bi bi-geo-alt bold"></i>
                     <span>Lorem ipsum dolor sit amet, 000 UAE </span>
                 </div>
-                <div>
-                    <i class="bi bi-envelope"></i>
+                <div class="d-flex">
+                    <i class="bi bi-envelope bold" ></i>
                     <span>info@milayacapital.ae</span>
                 </div>
 
