--- a/src/app/we-are-img-text-card/we-are-img-text-card.component.scss
+++ b/src/app/we-are-img-text-card/we-are-img-text-card.component.scss
@@ -21,6 +21,6 @@
         color: $mid-grey;
         font-weight: 600;
         line-height: 20px;
-        font-size: 15px;
+        font-size: $s-font;
     }
 }
