--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -37,7 +37,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../../assets/lines.svg) center / cover; // Replace 'your-image-url.jpg' with your image URL
-    z-index: -1; // Place the pseudo-element behind the content
-    opacity: 0.2; // Adjust the opacity as needed
+    background: url(../../assets/lines.svg) center / cover; 
+    z-index: -1; 
+    opacity: 0.2; 
 }
