--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -1,57 +1,142 @@
 @import '../../variables';
-.contact-form{
+
+.contact-form {
     margin: 20px;
     background-color: $white;
     color: $black;
     border-radius: 20px;
-    // width: 90%;
     margin-right: auto;
     margin-left: auto;
+    display: flex;
+    padding: 0px;
 
-    .row {
-        .send-message-section{
-            // box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow */
+    .text-danger{
+        font-size: $p-desc-port;
+    }
 
+    .d-flex {
+        div {
+            margin-right: 20px;
+            flex: 1;
+        }
+
+    }
+
+    .send-message-section {
+        flex: 2;
+        padding: 35px;
+        border-radius: 30px 0px 0px 30px;
+        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.10);
+
+        h2 {
+            color: $dark-grey;
+            font-size: $contact-tit;
+            font-weight: 600;
+            line-height: 146.4%;
+        }
+
+        p {
+            color: $mid-grey;
+            font-size: $s-font;
+            font-weight: 600;
+            line-height: 22px;
+            font-style: normal;
+        }
+
+        label {
+            color: $dark-grey;
+            font-size: $s-font;
+            font-weight: 600;
+            line-height: 22px;
+
+            .astrek {
+                color: $brand;
+            }
         }
     }
-   
 
-    .send-message-section{
-        padding: 35px;
-
-    }
-    .get-in-touch{
+    .get-in-touch {
+        flex: 1;
         color: $white;
         background-color: $brand;
         border-radius: 0px 20px 20px 0px;
         padding: 35px;
-        i{
+
+        i {
             font-size: 30px;
         }
+
+        .address-section {
+            display: flex;
+
+            .icon {
+                flex: 1;
+            }
+
+            .content {
+                flex: 4;
+            }
+        }
+
+        h1 {
+            color: $white;
+            font-size: $contact-tit;
+            font-weight: 600;
+            line-height: 36.6px;
+        }
+
+        .description-p {
+            color: $desciption-color;
+            font-size: $h2-font;
+            font-weight: 600;
+            line-height: 29.28px;
+        }
+
+        .description-p2 {
+            color: $white;
+            font-size: $p-font-sm;
+            font-weight: 500;
+            line-height: 17px;
+        }
+
+        span.description-p2 {
+            color: $white;
+            font-size: $p-font-sm;
+            font-weight: 500;
+            line-height: 17px;
+        }
+
+       
+
     }
 
-    .form-floating{
-        input, textarea{
+    .form-floating {
+
+        input,
+        textarea {
             border-style: none;
-            border-bottom: 1px solid grey;
+            border-bottom: 1px solid $mid-grey ;
             border-radius: 0;
         }
-        label{
+
+        label {
             padding: 0px;
         }
     }
 
-    .description-p{
+    .description-p {
         font-size: 12px;
-        
+
+    }
+
+    .contact-btn-col {
+        button {
+            border-radius: 0px;
+            width: 90%;
+        }
+        cursor: pointer;
+        margin: auto 0px auto;
+        width: 100%;
+        text-align: right;
     }
 }
-
-.col.contact-btn-col{
-    margin-bottom: 10px;
-    margin-top: auto;
-    margin-right: 0px;
-    margin-left: auto;
-    width: 100%;
-}
-
