--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,12 +9,17 @@
                 </p>
 
                 <div class="input-group mb-3 footer-input" [@fadeInFromBottom]>
-                    <input type="email" class="form-control" placeholder="Enter Your Email" aria-label="Email"
+                    <input type="email" class="form-control" placeholder="Enter Your Email"  [(ngModel)]="userEmail" aria-label="Email"
                         aria-describedby="basic-addon1">
                     <div class="input-group-append">
                         <span class="input-group-text" id="basic-addon1"> <i class="bi bi-arrow-up-right"></i> </span>
                     </div>
                 </div>
+
+                <div *ngIf="isEmailInvalid()" class="text-danger">
+                    Email is not in a valid format
+                  </div>
+
                 <!-- <p class="error">please enter valid email</p> -->
 
                 <div class="social-media-wrapper">
