--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,19 +7,20 @@
         </div>
         <div class="container">
             <span class="breadcrumb" [@fadeInFromTop]>ABOUT COMPANY</span>
-            <h1 [@enterFromLeft] >We are the magic behind the company’s best days. </h1>
+            <h1 [@enterFromLeft]>We are the magic behind the company’s best days. </h1>
             <div class="spacer-div"></div>
         </div>
         <div class="we-are-div">
-            <app-we-are-home ></app-we-are-home>
+            <app-we-are-home></app-we-are-home>
             <div class="spacer-div"></div>
         </div>
     </div>
- 
+
     <div class="second-bg">
         <div class="container">
             <span class="breadcrumb" [@fadeInFromLeft]> WHAT WE DO</span>
-            <h1 class="grey" [@fadeInFromLeft2]>Milaya Capital’s vision is to create a better tomorrow for the generations to come. A world
+            <h1 class="grey" [@fadeInFromLeft2]>Milaya Capital’s vision is to create a better tomorrow for the
+                generations to come. A world
                 where we can
                 live in
                 a sustainable future; hence we put all our efforts into being environmentally sustainable throughout our
@@ -36,7 +37,6 @@
     </div>
 
     <div class="third-bg">
-        <!-- <div class="layer-light-squares"> </div> -->
         <div class="spacer-div"></div>
         <app-new-business-heights></app-new-business-heights>
         <div class="spacer-div"></div>
@@ -51,9 +51,13 @@
     <div class="fifth-bg">
         <div class="layer-light-squares"> </div>
         <div class="spacer-div"></div>
-        <app-media [mediaType]="'video'"  [mediaURL]="'http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4'"></app-media>
-        <app-footer></app-footer>
+
+        <div>
+            <app-media [mediaType]="'video'" 
+                [mediaURL]="'https://player.vimeo.com/video/332079621?h=b8ef07fa3b&color=dedede&title=0&byline=0&portrait=0'"></app-media>
+        </div>
     </div>
 
 </div>
 
+<app-footer></app-footer>
