--- a/src/app/media/media.component.scss
+++ b/src/app/media/media.component.scss
@@ -1,13 +1,20 @@
 @import '../../variables';
 .media {
+    // .video-wrap{
+    //     background: red;
+    //     width: 100%;
+    // }
+    overflow: hidden;
+    padding: 0px;
     position: relative;
+    border-radius: 20px;
     .thumbnail{
-        width: 100%;
-        height: auto;
+        // width: 100%;
+        height: 100%;
         position: absolute;
         top: 0px;
         left: 0px;
-        height: 100%; //TODO: remove this when you get the right dimention photo from designer
+        // height: 100%; //TODO: remove this when you get the right dimention photo from designer
         border-radius: 20px;
     }
     .play-center-btn {
@@ -17,8 +24,8 @@
         left: 45%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
-        color: #fff;
-        font-size: 45px;
+        color: $white;
+        font-size: $h1-font;
     }
 
     .video-player {
