--- a/src/app/mission/mission.component.scss
+++ b/src/app/mission/mission.component.scss
@@ -1,17 +1,16 @@
 @import '../../variables';
 .mission{
-    // position: relative;
+    position: relative;
 }
 
 .mission::before {
     content: "";
     position: absolute;
-    top: 60%;
+    top: -10%;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../../assets/world.svg) center / cover; 
+    background: url(../../assets/world.svg) center / cover repeat-y; 
     z-index: -1; 
     opacity: 0.4; 
-    // background-repeat: repeat-y;
   }
