--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -36,7 +36,7 @@
     text-align: left;
     h1{
         color: $white;
-        font-size: 40px;
+        font-size: $l-font;
         font-weight: 700;
         display: inline !important;
     }
