--- a/src/app/portfolio-card/portfolio-card.component.scss
+++ b/src/app/portfolio-card/portfolio-card.component.scss
@@ -7,10 +7,7 @@
     }
     .right {
         display: flex;
-
         .image-side {
-            // margin: 0 auto;
-
             img {
                 float: right;
             }
@@ -19,7 +16,6 @@
 
     .left {
         display: flex;
-
         .image-side {
             img {
                 float: left;
@@ -33,12 +29,11 @@
 
     .text-side {
         color: $white;
-        font-size: 15px;
+        font-size: $s-font;
         flex: 1;
     }
 
     .image-side {
-
         width: 100%;
         height: auto;
         display: block;
@@ -46,7 +41,6 @@
         img {
             width: 100%;
         }
-
     }
 }
 
