--- a/src/app/portfolio-slider/portfolio-slider.component.scss
+++ b/src/app/portfolio-slider/portfolio-slider.component.scss
@@ -2,6 +2,7 @@
 
 .portfolio-slider {
     position: relative;
+
     .owl-carousel {
         padding: 10px;
         position: relative !important;
@@ -9,7 +10,6 @@
         .fa-chevron-left {
             color: $mid-grey;
             background-color: $white;
-
         }
 
         .owl-prev {
@@ -19,15 +19,13 @@
         }
     }
 
-    
+
     .portfolio-card {
         margin: 20px;
         border: 1px $mid-grey solid;
         border-radius: 20px;
         background: linear-gradient(150.12deg, rgba(217, 217, 217, 0.9) 3.9%, rgba(217, 217, 217, 0.1) 91.59%);
-        ;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2), -5px -5px 10px rgba(0, 0, 0, 0.2);
-        /* Box shadow on all four sides */
 
         .portfolio-card-image {
             width: 100%;
@@ -35,13 +33,19 @@
         }
 
         .portfolio-card-title {
+            color: $dark-grey;
             text-align: center;
+            font-size: $p-portfolio;
+            font-weight: 600;
+            line-height: 16px;
         }
 
         .portfolio-card-desc {
             text-align: center;
-            color: $dark-grey;
-
+            color: $contact-det-font;
+            font-weight: 600;
+            font-size: $p-desc-port;
+            line-height: 14px;
         }
     }
 }
@@ -51,10 +55,10 @@
     content: "";
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    right: 0;
+    width: 70%;
     height: 100%;
-    background: url(../../assets/gallerytxt.svg) center / cover;
+    background: url(../../assets/gallerytxt.svg) right bottom/contain no-repeat;
     z-index: -1;
-    opacity: 0.4;
+    opacity: 0.9;
 }
