--- a/src/variables.scss
+++ b/src/variables.scss
@@ -19,19 +19,22 @@ $border-width2: 20px; // Adjust the width of the second border
 //end milaya
 
 //milaya
+$tiny-font: 8px;
+$sm-f : 10px;
+$p-desc-port:11px;
+$p-font-sm: 12px;
+$p-portfolio:13px;
+$p-font: 14px;
 $s-font: 15px;
 $s-font-2 : 16px;
-$l-font: 40px;
-$h1-font: 50px;
+$title-font:17px;
+$md-font-p : 18px;
 $h2-font: 20px;
 $h3-font: 22px;
-$p-font: 14px;
-$p-font-sm: 12px;
-$title-font:17px;
-$tiny-font: 8px;
-$md-font-p : 18px;
-$sm-f : 10px;
+$contact-tit: 25px;
 $h2-font-big:30px;
+$l-font: 40px;
+$h1-font: 50px;
 //milaya end
 
 
@@ -177,6 +180,7 @@ $black-title:#000000;
 $height-color:#6C6D6D;
 $overview-color-contact: #FFFFFF59;
 $contact-det-font: #35353580;
+$desciption-color:rgba(255, 255, 255, 0.50);
 
 //end milaya
 
