--- a/src/variables.scss
+++ b/src/variables.scss
@@ -181,7 +181,7 @@ $height-color:#6C6D6D;
 $overview-color-contact: #FFFFFF59;
 $contact-det-font: #35353580;
 $desciption-color:rgba(255, 255, 255, 0.50);
-
+$map-icon:#868210;
 //end milaya
 
 $text: #54565a;
