finalizing some issues

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -20,6 +20,11 @@
             background-color: $dark-grey;
             border-radius: 30px
         }
+
+        @media screen and (max-width: 1500px) {
+            height: 130%;
+        }
+        
     }
 
     .content-container {
