--- a/src/app/why-choose-card/why-choose-card.component.scss
+++ b/src/app/why-choose-card/why-choose-card.component.scss
@@ -25,6 +25,7 @@
             font-size: $p-font-sm  ;
             font-weight: 500  ;
             line-height: 15px  ;
+            cursor: pointer;
 
         }
     }
