--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -24,7 +24,7 @@
             <app-counter-card class="col"></app-counter-card>
         </div>
         <div class="spacer-div"></div>
-        <div class="divider" [@fadeInFromTop]></div>>
+        <div class="divider" [@fadeInFromTop]></div>
     </div>
     <div class="spacer-div"></div>
 
