--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -13,7 +13,7 @@
                         <input type="name" id="name" name="name"  formControlName="name" required class="form-control"
                             placeholder="Name" />
                         <label for="name">Your Name<span class="astrek">*</span></label>
-                        <div *ngIf="contactForm.get('name')?.hasError('required')" class="text-danger">
+                        <div *ngIf="contactForm.get('name')?.touched && contactForm.get('name')?.hasError('required')" class="text-danger">
                             Name is required
                           </div>
                     </div>
@@ -21,7 +21,7 @@
                         <input type="sur_name" name="sur_name"  formControlName="sur_name"  required
                             class="form-control" id="sur_name" placeholder="Surname" />
                         <label for="sur_name">Your Surname<span class="astrek">*</span></label>
-                        <div *ngIf="contactForm.get('sur_name')?.hasError('required')" class="text-danger">
+                        <div *ngIf="contactForm.get('sur_name')?.touched && contactForm.get('sur_name')?.hasError('required')" class="text-danger">
                             Surname is required
                           </div>
                     </div>
@@ -32,10 +32,10 @@
                         <input type="email" name="email" formControlName="email"   required email class="form-control"
                             id="email" placeholder="Email" />
                         <label for="email">E-mail<span class="astrek">*</span></label>
-                        <div *ngIf="contactForm.get('email')?.hasError('required')" class="text-danger">
+                        <div *ngIf="contactForm.get('email')?.touched &&  contactForm.get('email')?.hasError('required')" class="text-danger">
                             Email is required
                         </div>
-                        <div *ngIf="contactForm.get('email')?.hasError('email')" class="text-danger">
+                        <div *ngIf="contactForm.get('email')?.touched && contactForm.get('email')?.hasError('email')" class="text-danger">
                             Email is not in a valid format
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <textarea rows="5" cols="27" type="message" id="message" name="message" required
                            formControlName="message" class="form-control" placeholder="Message"></textarea>
                         <label for="message">Message<span class="astrek">*</span></label>
-                        <div *ngIf="contactForm.get('message')?.hasError('required')" class="text-danger">
+                        <div *ngIf="contactForm.get('message')?.touched &&  contactForm.get('message')?.hasError('required')" class="text-danger">
                             Message is required
                           </div>
                     </div>
