--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
                     <input type="email" class="form-control" placeholder="Enter Your Email"  [(ngModel)]="userEmail" aria-label="Email"
                         aria-describedby="basic-addon1">
                     <div class="input-group-append">
-                        <span class="input-group-text" id="basic-addon1"> <i class="bi bi-arrow-up-right"></i> </span>
+                        <span class="input-group-text"> <i class="bi bi-arrow-up-right"></i> </span>
                     </div>
                 </div>
 
@@ -37,9 +37,9 @@
             <div class="col quick-links">
                 <h4 class="title">Company</h4>
 
-                <p class="grey-p-small">About Us</p>
-                <p class="grey-p-small">Mission and Vision</p>
-                <p class="grey-p-small">Portfolio</p>
+                <p class="grey-p-small" [routerLink]="'/about'">About Us</p>
+                <p class="grey-p-small" [routerLink]="'/mission'">Mission and Vision</p>
+                <p class="grey-p-small" [routerLink]="'/portfolio'">Portfolio</p>
 
 
             </div>
