--- a/src/app/mission-slider/mission-slider.component.html
+++ b/src/app/mission-slider/mission-slider.component.html
@@ -1,9 +1,10 @@
-<div [@fadeInFromTop2]>
+<div >
+    <!-- [@fadeInFromTop2] -->
     <owl-carousel-o class="container" [options]="customOptions">
-        <ng-container *ngFor="let slide of slides">
+        <ng-container *ngFor="let slide of slides; let i = index;">
             <ng-template carouselSlide>
 
-                <div class="mission-card">
+                <div class="mission-card"  [ngClass]="getAnimationClass(i)">
                     <div class="icon-mission-card">
                         <i [class]="slide.icon"></i>
                     </div>
