--- a/src/app/portfolio-slider/portfolio-slider.component.html
+++ b/src/app/portfolio-slider/portfolio-slider.component.html
@@ -1,6 +1,6 @@
-<div class="portfolio-slider "  [@fadeInFromTop1]>
+<div class="portfolio-slider" [@fadeInFromTop1]>
     <owl-carousel-o class="container" [options]="customOptions">
-        <ng-container *ngFor="let slide of slides">
+        <ng-container *ngFor="let slide of slides; let i = index;">
             <ng-template carouselSlide>
                 <div class="portfolio-card">
                     <div class="portfolio-card-image">
