--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,4 +1,4 @@
-<div class="clients">
+<div class="clients" [ngClass]="{'mobile':isMobile}" >
     <span class="breadcrumb" [@fadeInFromTop]>CLIENTS</span>
     <h1 class="black" [@fadeInFromTop1]> Look Closer With Our Beloved Client</h1>
 
