--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<div class="contact-form container">
+<div class="contact-form container"  [ngClass]="{'mobile':isMobile}" >
     <div class="send-message-section">
         <h2 [@slideInFromRight]>Send us a message</h2>
         <p [@fadeInFromRight]> Our customer representative specially assigned to you will respond to your message as
