--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact">
+<div class="contact" [ngClass]="{'mobile':isMobile}" >
     <div class="background-container">
         <div class="first-bg"></div>
     </div>
