--- a/src/app/counter-card/counter-card.component.html
+++ b/src/app/counter-card/counter-card.component.html
@@ -1,4 +1,4 @@
-<div class="counter-card">
+<div class="counter-card" [ngClass]="{'mobile':isMobile}" >
     <div>
         <h1 class="col-counter-num">536+</h1>
     </div>
