--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container footer row">
+<div class="container footer row"  [ngClass]="{'mobile':isMobile}" >
     <div class="col-4">
         <div class="row">
             <div class="col">
