--- a/src/app/new-business-heights/new-business-heights.component.html
+++ b/src/app/new-business-heights/new-business-heights.component.html
@@ -1,4 +1,4 @@
-<div class="new-business-heights container">
+<div class="new-business-heights container" [ngClass]="{'mobile':isMobile}" >
     <div class="box">
         <span class="breadcrumb" [@slideLeftToRight]>MILAYA CAPITAL</span>
         <h1 class="black" [@slideLeftToRight]>New Business Heights</h1>
