--- a/src/app/we-are-card/we-are-card.component.html
+++ b/src/app/we-are-card/we-are-card.component.html
@@ -1,6 +1,6 @@
-<div class="container weare row">
+<div class="container weare row"  [ngClass]="{'mobile':isMobile}" >
     <div class="col">
-        <img class="imgweare" alt="weare" src="../../assets/we-are-img.svg" [@enterFromLeft]>
+        <img class="imgweare" alt="weare" src="../../assets/we-are-img.svg" [@enterFromLeft] >
     </div>
     <div class="col details-div">
         <div class="tit-div">
