--- a/src/app/we-are-home/we-are-home.component.html
+++ b/src/app/we-are-home/we-are-home.component.html
@@ -1,4 +1,4 @@
-<div class="we-are-home container">
+<div class="we-are-home container"  [ngClass]="{'mobile':isMobile}" >
     <div class="container we-are-left-div">
         <span class="box-title">
             <h3 [@fadeInFromLeft]>Our Work </h3>
