--- a/src/app/we-are-img-text-card/we-are-img-text-card.component.html
+++ b/src/app/we-are-img-text-card/we-are-img-text-card.component.html
@@ -1,4 +1,4 @@
-<div class="container we-are-img-text">
+<div class="container we-are-img-text"  [ngClass]="{'mobile':isMobile}" >
     <div>
         <img class="imgwearecard" alt="wearecard" src="../../assets/we-are-img-card-1.svg">
     </div>
