--- a/src/app/what-we-do-card/what-we-do-card.component.html
+++ b/src/app/what-we-do-card/what-we-do-card.component.html
@@ -1,4 +1,4 @@
-<div class="what-we-do-card" [ngClass]="{'left-align': alignment == 'left'}" >
+<div class="what-we-do-card" [ngClass]="{'left-align': alignment == 'left','mobile':isMobile}"   >
     <div>
         <h2 class="what-we-do-title">{{title}}</h2>
         <p class="what-we-do-desc small">{{description}} </p>
