--- a/src/app/why-choose-card/why-choose-card.component.html
+++ b/src/app/why-choose-card/why-choose-card.component.html
@@ -1,4 +1,4 @@
-<div class="why-choose-card">
+<div class="why-choose-card"  [ngClass]="{'mobile':isMobile}">
     <div class="card-choose"> 
         <div class="row">
             <div class="col-3">
