--- a/src/app/why-choose/why-choose.component.html
+++ b/src/app/why-choose/why-choose.component.html
@@ -1,4 +1,4 @@
-<div class="why-choose container">
+<div class="why-choose container"  [ngClass]="{'mobile':isMobile}" >
     <div class="upper-box">
         <div class="box">
             <span class="breadcrumb" [@fadeInFromLeft]>WHY CHOOSE MILAYA CAPITAL’S</span>
