--- a/src/app/heights-slider/heights-slider.component.html
+++ b/src/app/heights-slider/heights-slider.component.html
@@ -1,4 +1,4 @@
-<div class="heights-slider ">
+<div class="heights-slider "  [ngClass]="{'mobile':isMobile}" >
     <!-- [@enterFromBottom] -->
     <owl-carousel-o [options]="customOptions">
         <ng-container *ngFor="let slide of slides; let i = index;">
