--- a/src/app/main-poster/main-poster.component.scss
+++ b/src/app/main-poster/main-poster.component.scss
@@ -1,4 +1,5 @@
 @import '../../variables';
+
 .main-poster {
     border-radius: 20px;
     padding: 40px;
@@ -9,6 +10,7 @@
     background-repeat: no-repeat;
     position: relative;
     z-index: 0;
+    
 
     @media screen and (max-width: 1000px) {
         padding: 20px;
@@ -37,7 +39,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color:$brand;
+        background-color: $brand;
         color: $white;
         z-index: -1;
         mix-blend-mode: multiply;
@@ -64,7 +66,7 @@
         border-radius: 20px;
     }
 
-    .about-btn{
+    .about-btn {
         width: 148px !important;
         border-radius: 47px;
         background-color: $white;
@@ -77,4 +79,31 @@
     }
 
 
+}
+
+
+.mobile-poster {
+    width: 100%;
+    background-position: 30% top;
+    background-size: inherit;
+    margin: 0px;
+    border-radius: 0px;
+
+    .main-desc {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 30px;
+        margin: 100px 0px 0px 0px;
+    }
+    .desc {
+        color: $white-grey;
+        font-size: $p-desc-port;
+        margin:30px 0px 30px 0px;
+        line-height: 16px;
+        font-weight: 600;
+
+    }
+    .layer{
+        border-radius: 0px;
+    }
 }
