--- a/src/app/portfolio-card/portfolio-card.component.html
+++ b/src/app/portfolio-card/portfolio-card.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-card left-card" *ngIf="imageWay == 'left'" [@slideFromLeft]  (click)="navigateToDetailsPage(1)" >
+<div class="portfolio-card left-card" *ngIf="imageWay == 'left'" [@slideFromLeft]  (click)="navigateToDetailsPage(1)"   [ngClass]="{'mobile':isMobile}" >
     <div class="left">
         <div class="image-side">
            <img alt="portfolio" src="../../assets/portfolio-card.svg">
