--- a/src/app/portfolio-detail-card/portfolio-detail-card.component.html
+++ b/src/app/portfolio-detail-card/portfolio-detail-card.component.html
@@ -1,4 +1,4 @@
-<div class="container portfolio-detail-card">
+<div class="container portfolio-detail-card"  [ngClass]="{'mobile':isMobile}" >
     <div class="image-side">
         <img class="image-shadow" alt="img" src="../../assets/portfolio-card.svg">
     </div>
