--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 
-<div class="container portfolio">
-    <app-overview [pageTitle]="'Latest Portfolio'"  [pageOverviewText]="'Consulting is a long-term investment in your goal’s future.'"></app-overview>
+<div class="container portfolio" [ngClass]="{'mobile':isMobile}" >
+        <app-overview [pageTitle]="'Latest Portfolio'"  [pageOverviewText]="'Consulting is a long-term investment in your goal’s future.'"></app-overview>
     <div class="spacer-div"></div>
     <div class="portfolio-divs">
         <div class="spacer-div"></div>
